--- a/Github_Repo.ipynb
+++ b/Github_Repo.ipynb
@@ -16,7 +16,8 @@
    "outputs": [],
    "source": [
     "print(\"Hello Word\")\n",
-    "print(\"Hello Word\")"
+    "print(\"Hello Word\")\n",
+    "print(\"Ma nouvelle branche\")"
    ]
   }
  ],
